fixed spacing on about page

--- a/client/src/aboutpage.scss
+++ b/client/src/aboutpage.scss
@@ -20,3 +20,44 @@
   font-family: $poppins;
   margin: 0;
 }
+
+@media (min-width: 800px) {
+  .about-page-main {
+    background-position: left -10vw top 50vw;
+  }
+}
+
+@media (min-width: 900px) {
+  .about-page-main {
+    background-position: left -10vw top 40vw;
+    padding-bottom: 6rem;
+  }
+}
+
+@media (min-width: 1000px) {
+  .about-page-main {
+    background-position: left -10vw top 40vw;
+    padding-bottom: 6rem;
+  }
+}
+
+@media (min-width: 1200px) {
+  .about-page-main {
+    background-position: left -5vw top 35vw;
+    padding-bottom: 7rem;
+  }
+}
+
+@media (min-width: 1350px) {
+  .about-page-main {
+    background-position: left -5vw top 35vw;
+    padding-bottom: 13rem;
+  }
+}
+
+@media (min-width: 1500px) {
+  .about-page-main {
+    background-position: left -3vw top 25vw;
+    padding-bottom: 13rem;
+  }
+}
